--- a/frontend/src/styles/form.css
+++ b/frontend/src/styles/form.css
@@ -1,13 +1,26 @@
-.from-container {
+body {
+  background-color: rgb(204, 238, 190)
+}
+h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 45px;
+
+}
+.form-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 50px auto;
+  margin: 50% auto;
   padding: 20px;
+  border: none;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0.1);
   max-width: 400px;
+  height: 500px;
+  transition: transform 0.3s ease;
+  background-color: white;
 }
 
 .form-input {
@@ -20,16 +33,23 @@
 }
 
 .form-button {
-  width: 95%;
+  width: 20%;
   padding: 10px;
   margin: 20px 0;
   background-color: #007bff;
   color: white;
   border: none;
+  text-align: center;
   border-radius: 4px;
   cursor: pointer;
 }
+
 .form-button:hover {
   background-color: #0056b3;
-  width: 20px;
+  transform: scale(1.05);
+}
+.password-reset {
+  background-color: #007bff;
+  cursor: pointer;
+  border: none;
 }
